Bug 375446 - First stashed working set disappears
Summary: First stashed working set disappears
Status: RESOLVED FIXED
Alias: None
Product: kdevelop
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.6.1
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: kdevelop-bugs-null
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-01-23 11:58 UTC by Ovidiu-Florin BOGDAN
Modified: 2021-05-24 12:03 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ovidiu-Florin BOGDAN 2017-01-23 11:58:06 UTC
How to reproduce:

1. Open a few files
2. Click on the working set icon
3. Click on stash

Expected Result:
Working set Icon to become active, files to dissapear from the text view.

Actual Result:
Files disappear from the text view, and so does the Working Set button.

Opening more files now, and stashing them works as expected. And so do future repetitions. Only the first is problematic.
Comment 1 Lassi Väätämöinen 2020-09-12 20:42:15 UTC
Still present at 5.6.0.

Needed to close Kdevelop and/or in the top-right corner do:
Code -> Debug Launch

Then the stashed working button set re-appeared.
Comment 2 Roger 2021-02-14 03:46:49 UTC
I confirm the bug, exactly as reported.
I'm using Kdevelop version 5.6.1, in openSUSE Tumbleweed.
Comment 3 Christoph Roick 2021-05-24 12:03:31 UTC
Git commit fb3f039696567f9ae0b46fe05c2e61fcbfeb718b by Christoph Roick.
Committed on 23/05/2021 at 11:28.
Pushed by croick into branch 'master'.

Fix disappearing closed working set buttons

Fix the current behavior that working set buttons of
working sets that are active in another area (i.e. code,
review, debug) are not part of the current closed working
set collection.
New working sets are persistent by default, except for
newly created working sets for patch reviews.
When switching from the patch review to the code area, keep
the current working set open, if it is persistent (so if it is
not the dynamically created one).

M  +6    -5    kdevplatform/shell/debugcontroller.cpp
M  +4    -4    kdevplatform/shell/tests/test_workingsets.cpp
M  +2    -1    kdevplatform/shell/workingsetcontroller.cpp
M  +3    -7    kdevplatform/shell/workingsets/closedworkingsetswidget.cpp
M  +2    -7    kdevplatform/shell/workingsets/workingset.cpp
M  +1    -1    kdevplatform/shell/workingsets/workingset.h
M  +10   -3    kdevplatform/sublime/area.cpp
M  +5    -2    kdevplatform/sublime/area.h
M  +11   -5    plugins/patchreview/patchreview.cpp

https://invent.kde.org/kdevelop/kdevelop/commit/fb3f039696567f9ae0b46fe05c2e61fcbfeb718b